<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Incluimos la ToolBar-->
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/tvInsertarNoticia"
            style="@style/Titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/title_insertar"></TextView>

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/titulo"></TextView>

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName"></EditText>


        <TextView
            android:id="@+id/tvEnlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/enlace"></TextView>


        <EditText
            android:id="@+id/etEnlace"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textUri"></EditText>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/fecha" />

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="date" />

        <Button
            android:id="@+id/btInsertarNoticia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/boton_guardar" />


    </LinearLayout>

</RelativeLayout>